# data-manager

./: Cargo.toml  README.md
docs/: README.md
local_catalogue_dir/: registry.parquet
src/: data_catalogue.rs  data_chunk.rs  data_manager.rs  event_loop.rs  iooperation.rs  lib.rs  local_data_source.rs
