[package]
name = "data-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3.31", features = ["thread-pool"] }
hex = "0.4.3"
polars = { version = "0.43.1", features = ["parquet", "lazy", "polars-sql"] }
sha256 = "1.5.0"
serde_json = "1.0.128"

[dev-dependencies]
serial_test = "3.1.1"